# esp-sgp41-VOC-NOx

./: Cargo.toml  README.md  build.rs  justfile
.cargo/: config.toml
src/: hal.rs  led.rs  lib.rs
src/tasks/: conditioning.rs  led.rs  mod.rs  sgp41_measurement.rs
tests/: arduino.ino
